GraphGenerator/src/de/alexhein/graphgenerator/parsers/agg/AgggrammarParser.java
package de.alexhein.graphgenerator.parsers.agg;

// Generated from Agggrammar.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AgggrammarParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__19=1, T__18=2, T__17=3, T__16=4, T__15=5, T__14=6, T__13=7, T__12=8, 
		T__11=9, T__10=10, T__9=11, T__8=12, T__7=13, T__6=14, T__5=15, T__4=16, 
		T__3=17, T__2=18, T__1=19, T__0=20, UPPERC=21, LOWERC=22, PROB=23, WS=24, 
		LINE_COMMENT=25, COMMENT=26;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "')'", "'=>'", "','", "'+'", "'['", "'or'", "'*'", 
		"'('", "'not'", "'<=>'", "'='", "'!='", "';'", "'{'", "'type'", "'and'", 
		"'}'", "'|'", "'!'", "UPPERC", "LOWERC", "PROB", "WS", "LINE_COMMENT", 
		"COMMENT"
	};
	public static final int
		RULE_aggsig = 0, RULE_sortdef = 1, RULE_consts = 2, RULE_preddef = 3, 
		RULE_sorts = 4, RULE_probcond = 5, RULE_cond = 6, RULE_constrs = 7, RULE_constr = 8, 
		RULE_neqconstr = 9, RULE_eqconstr = 10, RULE_concl = 11, RULE_prem = 12, 
		RULE_form = 13, RULE_implication = 14, RULE_disjunction = 15, RULE_conjunction = 16, 
		RULE_negation = 17, RULE_parentform = 18, RULE_atom = 19, RULE_args = 20, 
		RULE_var_id = 21, RULE_const_id = 22, RULE_pred_id = 23, RULE_sort_id = 24, 
		RULE_nequ = 25, RULE_coimplic = 26, RULE_implic = 27, RULE_or = 28, RULE_and = 29, 
		RULE_not = 30, RULE_equ = 31;
	public static final String[] ruleNames = {
		"aggsig", "sortdef", "consts", "preddef", "sorts", "probcond", "cond", 
		"constrs", "constr", "neqconstr", "eqconstr", "concl", "prem", "form", 
		"implication", "disjunction", "conjunction", "negation", "parentform", 
		"atom", "args", "var_id", "const_id", "pred_id", "sort_id", "nequ", "coimplic", 
		"implic", "or", "and", "not", "equ"
	};

	@Override
	public String getGrammarFileName() { return "Agggrammar.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public AgggrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class AggsigContext extends ParserRuleContext {
		public ProbcondContext probcond(int i) {
			return getRuleContext(ProbcondContext.class,i);
		}
		public List<SortdefContext> sortdef() {
			return getRuleContexts(SortdefContext.class);
		}
		public List<ProbcondContext> probcond() {
			return getRuleContexts(ProbcondContext.class);
		}
		public PreddefContext preddef(int i) {
			return getRuleContext(PreddefContext.class,i);
		}
		public SortdefContext sortdef(int i) {
			return getRuleContext(SortdefContext.class,i);
		}
		public List<PreddefContext> preddef() {
			return getRuleContexts(PreddefContext.class);
		}
		public AggsigContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aggsig; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterAggsig(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitAggsig(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitAggsig(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AggsigContext aggsig() throws RecognitionException {
		AggsigContext _localctx = new AggsigContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_aggsig);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==UPPERC) {
				{
				{
				setState(64); sortdef();
				}
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(73);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==16) {
				{
				{
				setState(70); preddef();
				}
				}
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==9) {
				{
				{
				setState(76); probcond();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortdefContext extends ParserRuleContext {
		public ConstsContext consts() {
			return getRuleContext(ConstsContext.class,0);
		}
		public Sort_idContext sort_id() {
			return getRuleContext(Sort_idContext.class,0);
		}
		public SortdefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sortdef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterSortdef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitSortdef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitSortdef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SortdefContext sortdef() throws RecognitionException {
		SortdefContext _localctx = new SortdefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_sortdef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82); sort_id();
			setState(83); match(12);
			setState(84); match(15);
			setState(85); consts();
			setState(86); match(18);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstsContext extends ParserRuleContext {
		public Const_idContext const_id(int i) {
			return getRuleContext(Const_idContext.class,i);
		}
		public List<Const_idContext> const_id() {
			return getRuleContexts(Const_idContext.class);
		}
		public ConstsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_consts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterConsts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitConsts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitConsts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstsContext consts() throws RecognitionException {
		ConstsContext _localctx = new ConstsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_consts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(89);
			_la = _input.LA(1);
			if (_la==LOWERC) {
				{
				setState(88); const_id();
				}
			}

			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(91); match(4);
				setState(92); const_id();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PreddefContext extends ParserRuleContext {
		public Pred_idContext pred_id() {
			return getRuleContext(Pred_idContext.class,0);
		}
		public SortsContext sorts() {
			return getRuleContext(SortsContext.class,0);
		}
		public PreddefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_preddef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterPreddef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitPreddef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitPreddef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PreddefContext preddef() throws RecognitionException {
		PreddefContext _localctx = new PreddefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_preddef);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98); match(16);
			setState(99); match(9);
			setState(100); pred_id();
			setState(101); match(9);
			setState(102); sorts();
			setState(103); match(2);
			setState(104); match(2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SortsContext extends ParserRuleContext {
		public Sort_idContext sort_id(int i) {
			return getRuleContext(Sort_idContext.class,i);
		}
		public List<Sort_idContext> sort_id() {
			return getRuleContexts(Sort_idContext.class);
		}
		public SortsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sorts; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterSorts(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitSorts(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitSorts(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SortsContext sorts() throws RecognitionException {
		SortsContext _localctx = new SortsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_sorts);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			_la = _input.LA(1);
			if (_la==UPPERC) {
				{
				setState(106); sort_id();
				}
			}

			setState(113);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(109); match(4);
				setState(110); sort_id();
				}
				}
				setState(115);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ProbcondContext extends ParserRuleContext {
		public ConstrsContext constrs() {
			return getRuleContext(ConstrsContext.class,0);
		}
		public TerminalNode PROB() { return getToken(AgggrammarParser.PROB, 0); }
		public CondContext cond() {
			return getRuleContext(CondContext.class,0);
		}
		public ProbcondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_probcond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterProbcond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitProbcond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitProbcond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProbcondContext probcond() throws RecognitionException {
		ProbcondContext _localctx = new ProbcondContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_probcond);
		try {
			setState(131);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(116); match(9);
				setState(117); cond();
				setState(118); match(2);
				setState(119); match(6);
				setState(120); match(PROB);
				setState(121); match(1);
				setState(122); constrs();
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(124); match(9);
				setState(125); cond();
				setState(126); match(2);
				setState(127); match(6);
				setState(128); match(PROB);
				setState(129); match(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondContext extends ParserRuleContext {
		public PremContext prem() {
			return getRuleContext(PremContext.class,0);
		}
		public ConclContext concl() {
			return getRuleContext(ConclContext.class,0);
		}
		public CondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cond; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterCond(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitCond(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondContext cond() throws RecognitionException {
		CondContext _localctx = new CondContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_cond);
		try {
			setState(138);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133); concl();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(134); concl();
				setState(135); match(19);
				setState(136); prem();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrsContext extends ParserRuleContext {
		public ConstrContext constr(int i) {
			return getRuleContext(ConstrContext.class,i);
		}
		public List<ConstrContext> constr() {
			return getRuleContexts(ConstrContext.class);
		}
		public ConstrsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constrs; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterConstrs(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitConstrs(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitConstrs(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstrsContext constrs() throws RecognitionException {
		ConstrsContext _localctx = new ConstrsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_constrs);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); match(6);
			setState(142);
			_la = _input.LA(1);
			if (_la==UPPERC) {
				{
				setState(141); constr();
				}
			}

			setState(148);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==4) {
				{
				{
				setState(144); match(4);
				setState(145); constr();
				}
				}
				setState(150);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(151); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConstrContext extends ParserRuleContext {
		public NeqconstrContext neqconstr() {
			return getRuleContext(NeqconstrContext.class,0);
		}
		public EqconstrContext eqconstr() {
			return getRuleContext(EqconstrContext.class,0);
		}
		public ConstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterConstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitConstr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitConstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConstrContext constr() throws RecognitionException {
		ConstrContext _localctx = new ConstrContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_constr);
		try {
			setState(155);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(153); neqconstr();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(154); eqconstr();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NeqconstrContext extends ParserRuleContext {
		public NequContext nequ() {
			return getRuleContext(NequContext.class,0);
		}
		public List<Var_idContext> var_id() {
			return getRuleContexts(Var_idContext.class);
		}
		public ConstsContext consts() {
			return getRuleContext(ConstsContext.class,0);
		}
		public Var_idContext var_id(int i) {
			return getRuleContext(Var_idContext.class,i);
		}
		public Const_idContext const_id() {
			return getRuleContext(Const_idContext.class,0);
		}
		public NeqconstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_neqconstr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterNeqconstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitNeqconstr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitNeqconstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NeqconstrContext neqconstr() throws RecognitionException {
		NeqconstrContext _localctx = new NeqconstrContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_neqconstr);
		try {
			setState(171);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(157); var_id();
				setState(158); nequ();
				setState(159); const_id();
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(161); var_id();
				setState(162); nequ();
				setState(163); match(9);
				setState(164); consts();
				setState(165); match(2);
				}
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				{
				setState(167); var_id();
				setState(168); nequ();
				setState(169); var_id();
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqconstrContext extends ParserRuleContext {
		public EquContext equ() {
			return getRuleContext(EquContext.class,0);
		}
		public Var_idContext var_id() {
			return getRuleContext(Var_idContext.class,0);
		}
		public ConstsContext consts() {
			return getRuleContext(ConstsContext.class,0);
		}
		public Const_idContext const_id() {
			return getRuleContext(Const_idContext.class,0);
		}
		public EqconstrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eqconstr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterEqconstr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitEqconstr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitEqconstr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqconstrContext eqconstr() throws RecognitionException {
		EqconstrContext _localctx = new EqconstrContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_eqconstr);
		try {
			setState(183);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(173); var_id();
				setState(174); equ();
				setState(175); const_id();
				}
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				{
				setState(177); var_id();
				setState(178); equ();
				setState(179); match(9);
				setState(180); consts();
				setState(181); match(2);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConclContext extends ParserRuleContext {
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public ConclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_concl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterConcl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitConcl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitConcl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConclContext concl() throws RecognitionException {
		ConclContext _localctx = new ConclContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_concl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(185); form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PremContext extends ParserRuleContext {
		public FormContext form() {
			return getRuleContext(FormContext.class,0);
		}
		public PremContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prem; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterPrem(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitPrem(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitPrem(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PremContext prem() throws RecognitionException {
		PremContext _localctx = new PremContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_prem);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(187); form();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FormContext extends ParserRuleContext {
		public CoimplicContext coimplic(int i) {
			return getRuleContext(CoimplicContext.class,i);
		}
		public List<ImplicationContext> implication() {
			return getRuleContexts(ImplicationContext.class);
		}
		public List<CoimplicContext> coimplic() {
			return getRuleContexts(CoimplicContext.class);
		}
		public ImplicationContext implication(int i) {
			return getRuleContext(ImplicationContext.class,i);
		}
		public FormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_form; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterForm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitForm(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitForm(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FormContext form() throws RecognitionException {
		FormContext _localctx = new FormContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_form);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(189); implication();
			setState(195);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==11) {
				{
				{
				setState(190); coimplic();
				setState(191); implication();
				}
				}
				setState(197);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImplicationContext extends ParserRuleContext {
		public List<ImplicContext> implic() {
			return getRuleContexts(ImplicContext.class);
		}
		public DisjunctionContext disjunction(int i) {
			return getRuleContext(DisjunctionContext.class,i);
		}
		public List<DisjunctionContext> disjunction() {
			return getRuleContexts(DisjunctionContext.class);
		}
		public ImplicContext implic(int i) {
			return getRuleContext(ImplicContext.class,i);
		}
		public ImplicationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_implication; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).enterImplication(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AgggrammarListener ) ((AgggrammarListener)listener).exitImplication(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AgggrammarVisitor ) return ((AgggrammarVisitor<? extends T>)visitor).visitImplication(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImplicationContext implication() throws RecognitionException {
		ImplicationContext _localctx = new ImplicationContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_implication);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(198); disjunction();
			setState(204);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==3) {
				{
				{
				setState(199); implic();
				setState(200); disjunction();
				}
				}
				setState(206);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
